# briefd

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
briefd/: __init__.py  auth.py  billing.py  cli.py  fetcher.py  health.py  interventions.py  models.py  pipeline.py  scheduler.py  storage.py  webhook.py
briefd/web/: __init__.py  app.py
briefd/web/templates/: account.html  base.html  index.html  landing.html  settings.html
briefd/web/templates/auth/: check_email.html  login.html
briefd/web/templates/briefings/: detail.html  list.html
scripts/: run_scheduler.sh
tests/: test_auth.py  test_billing.py  test_billing_gate.py  test_cli.py  test_cli_storage.py  test_fetcher.py  test_health.py  test_interventions.py  test_models.py  test_pipeline.py  test_rss.py  test_scheduler.py  test_storage.py  test_user_store.py  test_web.py  test_webhook.py
